Nommer l'application MyHali

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "expo": {
-        "name": "frontend",
-        "slug": "frontend-app",
+        "name": "MyHali",
+        "slug": "myhali-app",
         "privacy": "public",
         "sdkVersion": "36.0.0",
         "platforms": ["ios", "android", "web"],
