--- a/app.json
+++ b/app.json
@@ -26,6 +26,10 @@
     "ios": {
       "supportsTablet": true
     },
+    "android": {
+      "package": "com.origynslabs.myhali",
+      "buildNumber": "1.0.0"
+    },
     "description": ""
   }
 }
