--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
     },
     "android": {
       "package": "com.origynslabs.myhali",
-      "buildNumber": "1.0.0"
+      "versionCode": "1.0.0"
     },
     "description": ""
   }
