changed app.json for deployement #3

--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
     },
     "android": {
       "package": "com.origynslabs.myhali",
-      "versionCode": "1.0.0"
+      "versionCode": 1
     },
     "description": ""
   }
