--- a/app.json
+++ b/app.json
@@ -1,35 +1,37 @@
 {
-  "expo": {
-    "name": "MyHali",
-    "slug": "myhali-app",
-    "privacy": "public",
-    "sdkVersion": "36.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
-    "version": "1.0.0",
-    "orientation": "default",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#f0f3f5"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "package": "com.origynslabs.myhali",
-      "versionCode": 1
-    },
-    "description": ""
-  }
+    "expo": {
+        "name": "MyHali",
+        "slug": "myhali-app",
+        "privacy": "public",
+        "sdkVersion": "36.0.0",
+        "platforms": [
+            "ios",
+            "android",
+            "web"
+        ],
+        "version": "1.0.0",
+        "orientation": "default",
+        "icon": "./assets/icon.png",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#f0f3f5"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0
+        },
+        "assetBundlePatterns": [
+            "**/*"
+        ],
+        "ios": {
+            "supportsTablet": true,
+            "bundleIdentifier": "com.origynslabs.myhali",
+            "buildNumber": "1.0.0"
+        },
+        "android": {
+            "package": "com.origynslabs.myhali",
+            "versionCode": 1
+        },
+        "description": ""
+    }
 }
