--- a/app.json
+++ b/app.json
@@ -4,33 +4,25 @@
         "slug": "myhali-app",
         "privacy": "public",
         "sdkVersion": "36.0.0",
-        "platforms": [
-            "ios",
-            "android",
-            "web"
-        ],
+        "platforms": ["ios", "android", "web"],
         "version": "1.0.0",
         "orientation": "default",
-        "icon": "./assets/icon.png",
+        "icon": "./app/assets/logo.png",
         "splash": {
-            "image": "./assets/splash.png",
+            "image": "./app/assets/MyHali-2.png",
             "resizeMode": "contain",
             "backgroundColor": "#f0f3f5"
         },
         "updates": {
             "fallbackToCacheTimeout": 0
         },
-        "assetBundlePatterns": [
-            "**/*"
-        ],
+        "assetBundlePatterns": ["**/*"],
         "ios": {
-            "supportsTablet": true,
-            "bundleIdentifier": "com.origynslabs.myhali",
-            "buildNumber": "1.0.0"
+            "supportsTablet": true
         },
         "android": {
             "package": "com.origynslabs.myhali",
-            "versionCode": 1
+            "versionCode": 2
         },
         "description": ""
     }
