--- a/package.json
+++ b/package.json
@@ -11,20 +11,29 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "^5.0.5",
+    "apisauce": "^1.1.1",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-av": "~8.0.0",
+    "expo-location": "~8.0.0",
+    "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-simple-toast": "^1.0.0",
-    "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
-    "react-navigation": "^1.5.11"
+    "react-navigation": "^1.5.11",
+    "expo-asset": "~8.0.0",
+    "expo-file-system": "~8.0.0",
+    "expo-font": "~8.0.0",
+    "expo-permissions": "~8.0.0",
+    "expo-media-library": "~8.0.0",
+    "expo-document-picker": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
