--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "apisauce": "^1.1.1",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-asset": "~8.0.0",
     "expo-av": "~8.0.0",
+    "expo-document-picker": "~8.0.0",
+    "expo-file-system": "~8.0.0",
+    "expo-font": "~8.0.0",
     "expo-location": "~8.0.0",
+    "expo-media-library": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -27,13 +33,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-simple-toast": "^1.0.0",
-    "react-navigation": "^1.5.11",
-    "expo-asset": "~8.0.0",
-    "expo-file-system": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "expo-permissions": "~8.0.0",
-    "expo-media-library": "~8.0.0",
-    "expo-document-picker": "~8.0.0"
+    "react-navigation": "^1.5.11"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
