--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@bugsnag/expo": "^7.3.1",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "^5.0.5",
@@ -21,6 +22,7 @@
     "expo-font": "~8.0.0",
     "expo-location": "~8.0.0",
     "expo-media-library": "~8.0.0",
+    "expo-optimize": "^0.1.43",
     "expo-permissions": "~8.0.0",
     "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
