--- a/package.json
+++ b/package.json
@@ -8,38 +8,39 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@bugsnag/expo": "^7.3.1",
-    "@react-native-community/masked-view": "0.1.5",
-    "@react-navigation/native": "^5.0.5",
-    "@react-navigation/stack": "^5.0.5",
-    "apisauce": "^1.1.1",
+    "@bugsnag/expo": "^7.5.2",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "apisauce": "^1.1.2",
     "axios": "^0.19.2",
-    "expo": "~36.0.0",
-    "expo-asset": "~8.0.0",
-    "expo-av": "~8.0.0",
-    "expo-document-picker": "~8.0.0",
-    "expo-file-system": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "expo-location": "~8.0.0",
-    "expo-media-library": "~8.0.0",
-    "expo-optimize": "^0.1.43",
-    "expo-permissions": "~8.0.0",
+    "expo": "^39.0.0",
+    "expo-asset": "~8.2.0",
+    "expo-av": "~8.6.0",
+    "expo-document-picker": "~8.4.0",
+    "expo-file-system": "~9.2.0",
+    "expo-font": "~8.3.0",
+    "expo-location": "~9.0.0",
+    "expo-media-library": "~9.2.1",
+    "expo-optimize": "^0.1.62",
+    "expo-permissions": "~9.3.0",
     "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-progress": "^4.1.2",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-simple-toast": "^1.0.0",
-    "react-navigation": "^1.5.11"
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "~2.10.1",
+    "react-native-simple-toast": "^1.1.3",
+    "react-navigation": "^1.6.1",
+    "@expo/vector-icons": "^10.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "@babel/core": "^7.12.7",
+    "babel-preset-expo": "~8.0.0"
   },
   "private": true
 }
