--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
     "@react-navigation/stack": "^5.12.8",
     "apisauce": "^1.1.2",
     "axios": "^0.19.2",
-    "expo": "^39.0.0",
-    "expo-asset": "~8.2.0",
-    "expo-av": "~8.6.0",
-    "expo-document-picker": "~8.4.0",
-    "expo-file-system": "~9.2.0",
-    "expo-font": "~8.3.0",
-    "expo-location": "~9.0.0",
-    "expo-media-library": "~9.2.1",
+    "expo": "^40.0.0",
+    "expo-asset": "~8.2.1",
+    "expo-av": "~8.7.0",
+    "expo-document-picker": "~8.4.1",
+    "expo-file-system": "~9.3.0",
+    "expo-font": "~8.4.0",
+    "expo-location": "~10.0.0",
+    "expo-media-library": "~10.0.0",
     "expo-optimize": "^0.1.62",
-    "expo-permissions": "~9.3.0",
+    "expo-permissions": "~10.0.0",
     "lottie-react-native": "~2.6.1",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-simple-toast": "^1.1.3",
     "react-navigation": "^1.6.1",
-    "@expo/vector-icons": "^10.0.0"
+    "@expo/vector-icons": "^12.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.7",
-    "babel-preset-expo": "~8.0.0"
+    "@babel/core": "~7.9.0",
+    "babel-preset-expo": "8.3.0"
   },
   "private": true
 }
