--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@bugsnag/expo": "^7.5.2",
+    "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
@@ -25,18 +26,17 @@
     "expo-optimize": "^0.1.62",
     "expo-permissions": "~9.3.0",
     "lottie-react-native": "~2.6.1",
-    "react": "~16.9.0",
+    "react": "~16.13.1",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "^0.7.3",
+    "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-simple-toast": "^1.1.3",
-    "react-navigation": "^1.6.1",
-    "@expo/vector-icons": "^10.0.0"
+    "react-navigation": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.7",
