--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@bugsnag/expo": "^7.5.2",
     "@expo/vector-icons": "^10.2.1",
-    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "apisauce": "^1.1.2",
@@ -26,6 +25,9 @@
     "expo-media-library": "~9.2.1",
     "expo-optimize": "^0.1.62",
     "expo-permissions": "~9.3.0",
+    "expo-secure-store": "^10.1.0",
+    "formik": "^2.2.6",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "~2.6.1",
     "react": "~16.13.1",
     "react-dom": "~16.9.0",
@@ -37,7 +39,8 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-simple-toast": "^1.1.3",
-    "react-navigation": "^1.6.1"
+    "react-navigation": "^1.6.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
