--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^39.0.0",
     "expo-asset": "~8.2.1",
     "expo-av": "~8.6.0",
+    "expo-constants": "^10.1.3",
     "expo-document-picker": "~8.4.1",
     "expo-file-system": "~9.2.0",
     "expo-font": "~8.3.0",
