--- a/app.json
+++ b/app.json
@@ -3,13 +3,13 @@
     "name": "MyHali",
     "slug": "myhali-app",
     "privacy": "public",
-    "sdkVersion": "39.0.0",
+    "sdkVersion": "41.0.0",
     "platforms": [
       "ios",
       "android",
       "web"
     ],
-    "version": "1.1.0",
+    "version": "4.1.0",
     "orientation": "default",
     "icon": "./app/assets/logo.png",
     "splash": {
@@ -28,10 +28,26 @@
     },
     "android": {
       "package": "com.origynslabs.myhali",
-      "versionCode": 2
+      "versionCode": 4
     },
     "description": "",
     "extra": {
+    },
+    "packagerOpts": {
+      "config": "metro.config.js",
+      "sourceExts": [
+        "expo.ts",
+        "expo.tsx",
+        "expo.js",
+        "expo.jsx",
+        "ts",
+        "tsx",
+        "js",
+        "jsx",
+        "json",
+        "wasm",
+        "svg"
+      ]
     }
   }
 }
