--- a/package.json
+++ b/package.json
@@ -8,39 +8,49 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.2.1",
+    "@expo/metro-config": "^0.1.81",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "apisauce": "^1.1.2",
     "axios": "^0.19.2",
-    "expo": "^39.0.0",
-    "expo-asset": "~8.2.1",
-    "expo-av": "~8.6.0",
+    "expo": "^41.0.0",
+    "expo-app-loading": "^1.1.2",
+    "expo-asset": "~8.3.1",
+    "expo-av": "~9.1.2",
+    "expo-cli": "^4.9.0",
     "expo-constants": "^10.1.3",
-    "expo-document-picker": "~8.4.1",
-    "expo-file-system": "~9.2.0",
-    "expo-font": "~8.3.0",
-    "expo-location": "~9.0.0",
-    "expo-media-library": "~9.2.1",
+    "expo-document-picker": "~9.1.2",
+    "expo-file-system": "~11.0.2",
+    "expo-font": "~9.1.0",
+    "expo-location": "~12.0.4",
+    "expo-media-library": "~12.0.2",
     "expo-optimize": "^0.1.62",
-    "expo-permissions": "~9.3.0",
-    "expo-secure-store": "^10.1.0",
+    "expo-permissions": "~12.0.1",
+    "expo-secure-store": "~10.1.0",
     "formik": "^2.2.6",
+    "global": "^4.4.0",
     "jwt-decode": "^3.1.2",
-    "lottie-react-native": "~2.6.1",
+    "lottie-react-native": "~3.5.0",
+    "metro-react-native-babel-transformer": "^0.59.0",
     "react": "~16.13.1",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-progress": "^4.1.2",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "^3.1.4",
-    "react-native-screens": "^2.10.1",
+    "react-native-sass-transformer": "^1.4.0",
+    "react-native-screens": "~3.0.0",
     "react-native-simple-toast": "^1.1.3",
-    "react-navigation": "^1.6.1",
+    "react-native-svg": "~12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^7.0.0",
+    "react-navigation": "^4.4.4",
+    "unimodules-permissions-interface": "^6.1.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
