--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/metro-config": "^0.1.81",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "^4.1.3",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.8.10",
@@ -22,12 +23,9 @@
     "expo-av": "~9.1.2",
     "expo-cli": "^4.9.0",
     "expo-constants": "^10.1.3",
-    "expo-document-picker": "~9.1.2",
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
     "expo-location": "~12.0.4",
-    "expo-media-library": "~12.0.2",
-    "expo-optimize": "^0.1.62",
     "expo-permissions": "~12.0.1",
     "expo-secure-store": "~10.1.0",
     "formik": "^2.2.6",
