--- a/app.json
+++ b/app.json
@@ -31,8 +31,7 @@
       "versionCode": 4
     },
     "description": "",
-    "extra": {
-    },
+    "extra": {},
     "packagerOpts": {
       "config": "metro.config.js",
       "sourceExts": [
@@ -48,6 +47,23 @@
         "wasm",
         "svg"
       ]
+    },
+    "plugins": [
+      "sentry-expo"
+    ],
+    "hooks": {
+      "postPublish": [
+        {
+          "file": "sentry-expo/upload-sourcemaps",
+          "config": {
+            "organization": "your sentry organization's short name here",
+            "project": "your sentry project's name here",
+            "authToken": "your auth token here"
+          }
+        }
+      ]
     }
   }
 }
+
+
