--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@sentry/react-native": "^2.6.2",
     "apisauce": "^1.1.2",
     "axios": "^0.19.2",
     "expo": "^41.0.0",
     "expo-app-loading": "^1.1.2",
+    "expo-application": "~3.1.2",
     "expo-asset": "~8.3.1",
     "expo-av": "~9.1.2",
     "expo-cli": "^4.9.0",
-    "expo-constants": "^10.1.3",
+    "expo-constants": "~10.1.3",
+    "expo-device": "~3.2.0",
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
     "expo-location": "~12.0.4",
     "expo-permissions": "~12.0.1",
     "expo-secure-store": "~10.1.0",
+    "expo-updates": "~0.5.4",
     "formik": "^2.2.6",
     "global": "^4.4.0",
     "jwt-decode": "^3.1.2",
@@ -48,6 +52,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.0.0",
     "react-navigation": "^4.4.4",
+    "sentry-expo": "^3.1.0",
     "unimodules-permissions-interface": "^6.1.0",
     "yup": "^0.32.9"
   },
